[gd_scene load_steps=2 format=3 uid="uid://dx4es8j7vfkug"]

[ext_resource type="Script" uid="uid://dxmk8e738kcqa" path="res://scripts/minigames/wild_mage_minigame.gd" id="1_wild_mage_minigame"]

[node name="WildMageMinigame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wild_mage_minigame")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.05, 0.1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Wild Mage Minigame (Poker)"
horizontal_alignment = 1

[node name="HandStrengthLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Hand Type: High Card (1.0x)"
horizontal_alignment = 1

[node name="HandDisplayLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Hand: "
horizontal_alignment = 1
autowrap_mode = 2

[node name="CardContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DiscardCounterLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Discards Remaining: 0"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="DiscardButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Discard Selected"

[node name="PlayButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Play"
